# mamba-causal-analysis

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  GIT_SETUP.md  IMPLEMENTATION_PLAN.md  PER_TIMESTEP_RESTORATION_SUMMARY.md  QUICKSTART.md  README.md  README_MAMBA_CAUSAL.md  SETUP_INSTRUCTIONS.md  VERTICAL_RESTORATION_SUMMARY.md  causal_trace.sub  environment.yml  pyproject.toml  requirements.txt  run_causal_trace.sh  test_per_timestep_ssm.py  test_phase1.py  test_phase2.py  test_vertical_restoration.py
.claude/: settings.local.json
docker/: .dockerignore  Dockerfile  run_causal_trace.sh
dsets/: __init__.py
experiments/: causal_trace.py
experiments_ssm/: run_causal_trace.py
mamba_analysis/: mamba_models.py
mamba_causal_analysis/: mamba_causal_trace.py  mamba_causal_trace_v2.py  mamba_models.py  mamba_repr_tools.py
notebooks/: average_causal_effects.ipynb  causal_tracing_visualization.ipynb  mamba_causal_trace.ipynb
notebooks_old/: causal_tracing_visualization.ipynb  causal_tracing_visualization_old.ipynb
tests/: __init__.py  test_causal_tracing.py  test_infrastructure.py
util/: globals.py
util_ssm/: mamba_layernames.py  nethook.py  ssm_nethook.py
