[project]
name = "mamba-causal-analysis"
version = "0.1.0"
description = "Causal mediation analysis for Mamba State Space Models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    {name = "Aydan Bailey", email = "ajbailey4@wisc.edu"}
]
dependencies = [
    "torch>=2.5.1",
    "mamba-ssm==2.3.0",
    "causal-conv1d==1.6.0",
    "transformers>=4.30.0",
    "tokenizers>=0.13.0",
    "datasets>=2.14.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.23.0",
    "ipywidgets>=8.0.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=70.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["notebooks*", "docker*"]

[tool.setuptools.package-data]
util = ["globals.yml"]
